corrects alignment

--- a/css/hola.css
+++ b/css/hola.css
@@ -772,7 +772,7 @@ h4 {
 }
 
 .cbp-l-project-desc-text {
-  font-size: 12.5px;
+  font-size: 14px;
   line-height: 28px;
   letter-spacing: 0.05em;
   text-align: justify;
